# FlexRaft-Code

./: CMakeLists.txt  Docker QUME编译内存不足log.txt  Dockerfile  Dockerfile QUME_x86  build_arm64.sh  example.conf
RCF/: CMakeLists.txt
RCF/include/RCF/: ObjectPool.hpp
bench/: CMakeLists.txt  util.h
build_arm64/: CMakeCache.txt
conf/: raft_cluster-3.conf  raft_cluster-5.conf  raft_cluster-7.conf
kv/: config.h
notes/: FlexRaft的优化在rk3588上的体现.odt  devices_list.txt  docker-cmd.txt  notes.md  test.md
raft/: CMakeLists.txt  raft.cc
raft/test/: CMakeLists.txt
scripts/: clean_cluster_data.sh  install_dependencies.py  send_conf.sh  send_images.sh  show_logs.sh  start_cluster.sh  stop_cluster.sh
